--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lucide-react": "^0.395.0",
     "motion": "^11.18.0",
     "next": "14.2.4",
+    "next-intl": "^3.26.4",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
